fix padding-top with mapbox behind navbar global.css

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -17,7 +17,9 @@ body {
 
 .pt-14 {
     padding: 0;
+    padding-top: 0;
 }
+
 .main-class {
     display: flex;
     justify-content: center;
